--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_common
-	base = af6108e5
-	trimbase = 
+	base = 04bf4d1f
+	trimbase = af6108e5
 	parent = upstream
 	previous = 51dae235
