--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = polled_camera
-	base = 45072907
-	trimbase = 
+	base = 251e8419
+	trimbase = 45072907
 	parent = upstream
 	previous = 51dae235
