--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_calibration_parsers
 	base = b3b2051
-	trimbase = 1214295
+	trimbase = 
 	parent = upstream
 	previous = 51dae23
