--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_calibration_parsers
-	base = 92fd2594
-	trimbase = 
+	base = 5f401131
+	trimbase = 92fd2594
 	parent = upstream
 	previous = 51dae235
