--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_transport
-	base = 159ec9b0
-	trimbase = 
+	base = defe201f
+	trimbase = 159ec9b0
 	parent = upstream
 	previous = 51dae235
