--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_info_manager
-	base = 74313fc6
-	trimbase = 
+	base = 37e1f3d7
+	trimbase = 74313fc6
 	parent = upstream
 	previous = 51dae235
