--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f401131
+	base = a2932f3f
 	trimbase = 
 	parent = release/kinetic/camera_calibration_parsers
-	previous = 
+	previous = 5f401131
