--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 719e9614
+	base = 3120c751
 	trimbase = 
 	parent = arch/kinetic/camera_calibration_parsers
-	previous = 
+	previous = 719e9614
