--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 04bf4d1f
+	base = 5ba5abb5
 	trimbase = 
 	parent = release/kinetic/image_common
-	previous = 
+	previous = 04bf4d1f
