--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1bd7c975
+	base = 85e57ddc
 	trimbase = 
 	parent = arch/kinetic/image_common
-	previous = 
+	previous = 1bd7c975
