--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = defe201f
+	base = ace3acdb
 	trimbase = 
 	parent = release/kinetic/image_transport
-	previous = 
+	previous = defe201f
