--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c511a3eb
+	base = bd980ab6
 	trimbase = 
 	parent = arch/kinetic/image_transport
-	previous = 
+	previous = c511a3eb
