--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 37e1f3d7
+	base = e312639d
 	trimbase = 
 	parent = release/kinetic/camera_info_manager
-	previous = 
+	previous = 37e1f3d7
