--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 182826f1
+	base = 33949407
 	trimbase = 
 	parent = arch/kinetic/camera_info_manager
-	previous = 
+	previous = 182826f1
