--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 251e8419
+	base = 62aad4cf
 	trimbase = 
 	parent = release/kinetic/polled_camera
-	previous = 
+	previous = 251e8419
