--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 479eb051
+	base = 1f70d430
 	trimbase = 
 	parent = arch/kinetic/polled_camera
-	previous = 
+	previous = 479eb051
