--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_common
-	base = 3c69015e
-	trimbase = 
+	base = a2d4b0cb
+	trimbase = 3c69015e
 	parent = upstream
 	previous = 51dae235
