--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = polled_camera
-	base = c40f223d
-	trimbase = 
+	base = 6ff357fb
+	trimbase = c40f223d
 	parent = upstream
 	previous = 51dae235
