--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_calibration_parsers
 	base = e5e9666
-	trimbase = 7a194c1
+	trimbase = 
 	parent = upstream
 	previous = 51dae23
