--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_calibration_parsers
-	base = a0dd5682
-	trimbase = 
+	base = 79a47946
+	trimbase = a0dd5682
 	parent = upstream
 	previous = 51dae235
