--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_transport
-	base = 263e62ad
-	trimbase = 
+	base = 2c3110a5
+	trimbase = 263e62ad
 	parent = upstream
 	previous = 51dae235
