--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_info_manager
-	base = 5ec68304
-	trimbase = 
+	base = 0dc16a4e
+	trimbase = 5ec68304
 	parent = upstream
 	previous = 51dae235
