--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a2d4b0cb
+	base = 1f260ade
 	trimbase = 
 	parent = release/lunar/image_common
-	previous = 
+	previous = a2d4b0cb
