--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 869c86fa
+	base = fc1e4ab5
 	trimbase = 
 	parent = arch/lunar/image_common
-	previous = 
+	previous = 869c86fa
