--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 79a47946
+	base = f7c1b22e
 	trimbase = 
 	parent = release/lunar/camera_calibration_parsers
-	previous = 
+	previous = 79a47946
