--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fae12562
+	base = 20718653
 	trimbase = 
 	parent = arch/lunar/camera_calibration_parsers
-	previous = 
+	previous = fae12562
