--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6ff357fb
+	base = 4a3646d0
 	trimbase = 
 	parent = release/lunar/polled_camera
-	previous = 
+	previous = 6ff357fb
