--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55ed4f7c
+	base = 7c940b62
 	trimbase = 
 	parent = arch/lunar/polled_camera
-	previous = 
+	previous = 55ed4f7c
