--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0dc16a4e
+	base = cbba062a
 	trimbase = 
 	parent = release/lunar/camera_info_manager
-	previous = 
+	previous = 0dc16a4e
