--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dbe82469
+	base = 372095d7
 	trimbase = 
 	parent = arch/lunar/camera_info_manager
-	previous = 
+	previous = dbe82469
