--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c3110a5
+	base = 551a948d
 	trimbase = 
 	parent = release/lunar/image_transport
-	previous = 
+	previous = 2c3110a5
