--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b6eb46d
+	base = 2a0e765d
 	trimbase = 
 	parent = arch/lunar/image_transport
-	previous = 
+	previous = 7b6eb46d
