--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_common
-	base = b78efa31
-	trimbase = 
+	base = 3d4d8427
+	trimbase = b78efa31
 	parent = upstream
 	previous = 51dae235
