--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = polled_camera
-	base = 7f4326b3
-	trimbase = 
+	base = bc133d37
+	trimbase = 7f4326b3
 	parent = upstream
 	previous = 51dae235
