--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_calibration_parsers
 	base = 101b5fe
-	trimbase = 7f64f51
+	trimbase = 
 	parent = upstream
 	previous = 51dae23
