--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_calibration_parsers
-	base = 5ccb6657
-	trimbase = 
+	base = bf385a5e
+	trimbase = 5ccb6657
 	parent = upstream
 	previous = 51dae235
