--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_transport
-	base = 10197474
-	trimbase = 
+	base = a3f0527e
+	trimbase = 10197474
 	parent = upstream
 	previous = 51dae235
