--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = camera_info_manager
-	base = 9081d52e
-	trimbase = 
+	base = 47e0c582
+	trimbase = 9081d52e
 	parent = upstream
 	previous = 51dae235
