--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d4d8427
+	base = 9606c6d2
 	trimbase = 
 	parent = release/melodic/image_common
-	previous = 
+	previous = 3d4d8427
