--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ddca0c70
+	base = 87aaede8
 	trimbase = 
 	parent = arch/melodic/image_common
-	previous = 
+	previous = ddca0c70
