--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 47e0c582
+	base = d2a99ea8
 	trimbase = 
 	parent = release/melodic/camera_info_manager
-	previous = 
+	previous = 47e0c582
