--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 212ea003
+	base = 062031b4
 	trimbase = 
 	parent = arch/melodic/camera_info_manager
-	previous = 
+	previous = 212ea003
