--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bc133d37
+	base = 55bb499d
 	trimbase = 
 	parent = release/melodic/polled_camera
-	previous = 
+	previous = bc133d37
