--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0e6ac91
+	base = 81851ed8
 	trimbase = 
 	parent = arch/melodic/polled_camera
-	previous = 
+	previous = f0e6ac91
