--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a3f0527e
+	base = 50edd878
 	trimbase = 
 	parent = release/melodic/image_transport
-	previous = 
+	previous = a3f0527e
