--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c636fb6
+	base = 49058547
 	trimbase = 
 	parent = arch/melodic/image_transport
-	previous = 
+	previous = 2c636fb6
