--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf385a5e
+	base = 606dcd1c
 	trimbase = 
 	parent = release/melodic/camera_calibration_parsers
-	previous = 
+	previous = bf385a5e
