--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a743d11d
+	base = 4e973e79
 	trimbase = 
 	parent = arch/melodic/camera_calibration_parsers
-	previous = 
+	previous = a743d11d
